package edu.hitsz.aircraftwar.bullet

/**
 * Hero bullet
 */
class HeroBullet(
    locationX: Int,
    locationY: Int,
    speedX: Int,
    speedY: Int,
    power: Int
) : BaseBullet(locationX, locationY, speedX, speedY, power)
